--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <p class="mb-4 text-lg leading-relaxed">
                         Light On Dev is a Programming Company focusing on Web Development, Web Design, and App Development. Want a website? I'm your guy.
                         <a href="/contact" class="text-blue-400">Send me a message</a>
-                        and we can discuss details - my prices are low and reasonable, and I have a
+                        and we can discuss details - my prices are reasonable, and I have a
                         <a href="#portfolio" class="text-blue-400"> lot of experience with Web
                             Development</a>
                         and can take care of your needs.
