--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </section>
             <div id="hero-bottom"></div>
 
-            <section id="intro" class="flex flex-row w-1/2 p-10 py-16 mx-auto">
+            <section id="intro" class="flex flex-row w-2/3 p-10 py-16 mx-auto">
                 <div class="text-center sm:w-1/3 sm:pr-8 sm:py-8">
                     <img class="inline-flex items-center justify-center w-20 h-20 text-gray-400 bg-gray-200 rounded-full" src="/assets/img/logo/round-logo.png">
                     </img>
@@ -84,7 +84,7 @@
                     <p class="mb-4 text-lg leading-relaxed">
                         Light On Dev is a Programming Company focusing on Web Development, Web Design, and App Development. Want a website? I'm your guy.
                         <a href="/contact" class="text-blue-400">Send me a message</a>
-                        and we can discuss details - my prices are reasonable, and I have a
+                        and we can discuss details - my prices are reasonable. I have a
                         <a href="#portfolio" class="text-blue-400"> lot of experience with Web
                             Development</a>
                         and can take care of your needs.
