New Contact Form

--- a/contact/index.html
+++ b/contact/index.html
@@ -35,26 +35,9 @@
             </div>
         </header>
         
-        <div class="flex flex-row items-center justify-center flex-1 pt-24 pb-12 mx-32 pageContent">
-            <div class="w-1/2 p-5 m-2 bg-white rounded-lg">
-                <div class="grid grid-cols-2 gap-4 text-left">
-                    <div>
-                        <p class="text-lg">Name</p>
-                        <input id="inputName" name="name" type="text" placeholder="John Doe" class="w-full p-3 border-2 rounded-lg">
-                    </div>
-                    <div>
-                        <p class="text-lg">Email</p>
-                        <input id="inputEmail" name="email" type="email" placeholder="john.doe@email.com" class="w-full p-3 border-2 rounded-lg">
-                    </div>
-                    <div class="col-span-2">
-                        <p class="text-lg">Message</p>
-                        <textarea id="inputMessage" name="message" type="text" placeholder="John Doe likes cake" class="w-full h-32 p-3 border-2 rounded-lg resize-none"></textarea>
-                    </div>
-                    <input type="hidden" name="_next" value="">
-                    <div class="col-span-2">
-                        <button id="inputSubmit" class="p-3 px-10 text-white rounded-lg brand-btn">Send</button>
-                    </div>
-                </div>
+        <div class="flex flex-row items-center justify-center flex-1 h-full pt-24 pageContent">
+            <div class="w-full h-full p-5 m-2 bg-white rounded-lg">
+                <iframe class="h-full w-full" src="https://docs.google.com/forms/d/e/1FAIpQLSdwtrhKmVXx2WEAk7cK7cR4lPbVwVBOsIpz-nZOh7fTNKPU1g/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
             </div>
         </div>
 
@@ -106,8 +89,6 @@
                 </div>
             </div>
         </footer>
-
-        <script src="/assets/js/main.js"></script>
     </body>
 
 </html>
