--- a/contact/index.html
+++ b/contact/index.html
@@ -37,7 +37,13 @@
         
         <div class="flex flex-row items-center justify-center flex-1 h-full pt-24 pageContent">
             <div class="w-full h-full p-5 m-2 bg-white rounded-lg">
-                <iframe class="h-full w-full" src="https://docs.google.com/forms/d/e/1FAIpQLSdwtrhKmVXx2WEAk7cK7cR4lPbVwVBOsIpz-nZOh7fTNKPU1g/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                <script src="https://unpkg.com/typebot-js@2.2"></script>
+                <div id="typebot-container" style="width: 100%; height: 100%;"></div>
+                <script>
+                Typebot.initContainer("typebot-container", {
+                    url: "https://forms.izmichael.com/lod-lead-generation",
+                });
+                </script>
             </div>
         </div>
 
