Add Plausible Analytics Tracking

--- a/contact/index.html
+++ b/contact/index.html
@@ -9,6 +9,9 @@
         <link rel="stylesheet" href="https://resources.izmichael.xyz/assets/tailwind2.css">
         <link rel="stylesheet" href="/assets/styles.css">
         <link rel="icon" type="image/png" href="/favicon.png" />
+
+        <!-- Plausible Analytics -->
+        <script defer data-domain="lightondev.xyz" src="https://analytics.izmichael.com/js/plausible.js"></script>
     </head>
 
     <body class="flex flex-col h-screen overflow-hidden">
