--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
         <meta property="twitter:title" content="Home | Light On Dev">
         <meta property="twitter:description" content="Light On Dev is a Programming Company focusing on Web Development, Web Design, and App Development.">
         <meta property="twitter:image" content="">
+
+        <!-- Plausible Analytics -->
+        <script defer data-domain="lightondev.xyz" src="https://analytics.izmichael.com/js/plausible.js"></script>
     </head>
 
     <body>
