--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="/assets/tailwind2.css">
         <link rel="stylesheet" href="https://resources.izmichael.xyz/assets/tailwind2.css">
         <link rel="stylesheet" href="/assets/styles.css">
-        <link rel="icon" type="image/png" href="./assets/img/logo/round-logo.png" />
+        <link rel="icon" type="image/png" href="favicon.png" />
 
         <!-- Primary Meta Tags -->
         <title>Home | Light On Dev</title>
