--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
 
         <!-- Open Graph / Facebook -->
         <meta property="og:type" content="website">
-        <meta property="og:url" content="https://lightondev.xyz/">
+        <meta property="og:url" content="https://lightondev.com/">
         <meta property="og:title" content="Home | Light On Dev">
         <meta property="og:description" content="Light On Dev is a Programming Company focusing on Web Development, Web Design, and App Development.">
         <meta property="og:image" content="">
 
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image">
-        <meta property="twitter:url" content="https://lightondev.xyz/">
+        <meta property="twitter:url" content="https://lightondev.com/">
         <meta property="twitter:title" content="Home | Light On Dev">
         <meta property="twitter:description" content="Light On Dev is a Programming Company focusing on Web Development, Web Design, and App Development.">
         <meta property="twitter:image" content="">
 
         <!-- Plausible Analytics -->
-        <script defer data-domain="lightondev.xyz" src="https://analytics.izmichael.com/js/plausible.js"></script>
+        <script defer data-domain="lightondev.com" src="https://analytics.izmichael.com/js/plausible.js"></script>
     </head>
 
     <body>
