--- a/contact/index.html
+++ b/contact/index.html
@@ -11,7 +11,7 @@
         <link rel="icon" type="image/png" href="/favicon.png" />
 
         <!-- Plausible Analytics -->
-        <script defer data-domain="lightondev.xyz" src="https://analytics.izmichael.com/js/plausible.js"></script>
+        <script defer data-domain="lightondev.com" src="https://analytics.izmichael.com/js/plausible.js"></script>
     </head>
 
     <body class="flex flex-col h-screen overflow-hidden">
